src/objects/Mogli_SMS__QuestionTemplate__c.object
<CustomObject>
    <fields>
        <fullName>Mogli_SMS__DefaultNextQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Next Question</label>
        <referenceTo>Mogli_SMS__QuestionTemplate__c</referenceTo>
        <relationshipLabel>Question Templates</relationshipLabel>
        <relationshipName>DefaultedFromQuestion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__FirstQuestion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__FormComplete__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Form Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__FormTemplate__c</fullName>
        <label>Form Template</label>
        <referenceTo>Mogli_SMS__FormTemplate__c</referenceTo>
        <relationshipLabel>Question Templates</relationshipLabel>
        <relationshipName>Question_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Message_Text__c</fullName>
        <label>Message Text</label>
        <type>TextArea</type>
    </fields>
    <label>Question Template</label>
    <nameField>
        <label>Question</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>